Fix dropdown demo

--- a/demo/dropdown.html
+++ b/demo/dropdown.html
@@ -82,7 +82,7 @@
         <script type="text/javascript" src="/dist/sleek.js"></script>
         <script type="text/javascript">
             (function() {
-                var root = new Sleek.Dropdown.Root()
+                var root = new Dropdown.Root()
                 root.makeUnder()
             })()
         </script>
